--- a/router3/graphViz/SpindleControl.dox
+++ b/router3/graphViz/SpindleControl.dox
@@ -4,82 +4,109 @@
     \brief This file contains the doxygen description and diagram illustrating the Spindle HAL components.
 
 
-    This diagram illustrates the .hal components I use with a VFD using the serial communications.
+    This diagram illustrates the .hal components I use with a VFD using wired connections.
     
     \dot
-        digraph structs {
-            concentrate=true
-            rankdir="LR"
-            label="Router spindle control."
-            subgraph cluster_spindle{
-                label="spindle.0"
-                node [shape=plaintext]
-                spindle_0 [shape="box" label=<
-                    <TABLE>
-                        <TR> 
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0" ALIGN="LEFT">
-                                    <TR><TD port="i0">at-speed</TD></TR>
-                                    <TR><TD port="i1">speed-in</TD></TR>                                    
-                                </TABLE>
-                            </TD>
-                            <TD>
-                                <TABLE CELLBORDER="0" BORDER="0" ALIGN="RIGHT">
-                                    <TR><TD ALIGN="RIGHT" port="o0"> speed-out </TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o1"> on </TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o2"> forward </TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o3"> reverse </TD></TR> 
-                                </TABLE>
-                            </TD>
-                        </TR>                                             
-                    </TABLE>
-                >
-                ]
-            }
+        digraph hal_net_SpindleControl {
+            graph [rankdir="LR"];
+            label = "SpindleControl"
+            node [fontsize = "8"];
 
-            subgraph cluster_vfd{
-                label="vfd"
-                vfd [shape="box" label=<
-                    <TABLE>
-                        <TR><TD>
-                            <TABLE CELLBORDER="0" BORDER="0">
-                                   <TR><TD ALIGN="LEFT" port="i0">speed-command</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i1">spindle-on</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i2">spindle-fwd</TD></TR>
-                            </TABLE>
-                        </TD>
-                        <TD>
-                            <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="o0">at-speed</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o1">motor-rpm</TD></TR> 
-                                    <TR><TD ALIGN="RIGHT" port="o2">load-percentage</TD></TR> 
-                            </TABLE>
-                        </TD></TR>                    
-                    </TABLE>
+            subgraph "component_hm2_7i92.0" {
+                label = "hm2_7i92.0"
+                cluster = true;
+            subgraph "subcomponent_gpio" {
+                label = "gpio"
+                cluster = true;
+                "hm2_7i92.0.gpio" [ shape="none" margin=0 label=<
+                    <TABLE CELLBORDER="0" BORDER="0"><TR><TD> 
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.000.out"> 000.out</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.007.out"> 007.out</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.020.out"> 020.out</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.022.out"> 022.out</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.024.out"> 024.out</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.026.out"> 026.out</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.029.out"> 029.out</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.033.out"> 033.out</TD></TR>
+                        </TABLE>
+                        </TD><TD>
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.003.in"> 003.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.014.in"> 014.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.015.in"> 015.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.016.in"> 016.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.017.in"> 017.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.023.in"> 023.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.025.in"> 025.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.027.in"> 027.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.028.in"> 028.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.031.in"> 031.in</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.032.in"> 032.in</TD></TR>
+                        </TABLE>
+                    </TD></TR></TABLE>
                 >]
-            }
+            }      #  end sub/component_hm2_7i92.0.gpio
+            subgraph "subcomponent_pwmgen" {
+                label = "pwmgen"
+                cluster = true;
+            subgraph "subcomponent_00" {
+                label = "00"
+                cluster = true;
+                "hm2_7i92.0.pwmgen.00" [ shape="none" margin=0 label=<
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.pwmgen.00.enable"> enable</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.pwmgen.00.value"> value</TD></TR>
+                        </TABLE>
+                >]
+            }      #  end sub/component_hm2_7i92.0.pwmgen.00
+            subgraph "subcomponent_01" {
+                label = "01"
+                cluster = true;
+                "hm2_7i92.0.pwmgen.01" [ shape="none" margin=0 label=<
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.pwmgen.01.enable"> enable</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.pwmgen.01.value"> value</TD></TR>
+                        </TABLE>
+                >]
+            }      #  end sub/component_hm2_7i92.0.pwmgen.01
+                "hm2_7i92.0.pwmgen" [ shape="none" margin=0 label=<
+                >]
+            }      #  end sub/component_hm2_7i92.0.pwmgen
+                "hm2_7i92.0" [ shape="none" margin=0 label=<
+                >]
+            }      #  end sub/component_hm2_7i92.0
 
-            src0  [shape="point" style="invis"];
-            sink0 [shape="point" style="invis"];
-            sink1 [shape="point" style="invis"];
 
-            spindle_0:o0 -> vfd:i0    [label="spindle-vel-cmd-rpm" fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o1 -> vfd:i1    [label="spindle-enable"      fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o2 -> vfd:i2    [label="spindle-cw"  fontsize = "12" fontcolor="blue" color="blue"];
+            subgraph "component_spindle.0" {
+                label = "spindle.0"
+                cluster = true;
+                "spindle.0" [ shape="none" margin=0 label=<
+                    <TABLE CELLBORDER="0" BORDER="0"><TR><TD> 
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="LEFT" PORT="spindle.0.amp-fault-in"> amp-fault-in</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="spindle.0.at-speed"> at-speed</TD></TR>
+                        </TABLE>
+                        </TD><TD>
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="RIGHT" PORT="spindle.0.forward"> forward</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="spindle.0.on"> on</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="spindle.0.reverse"> reverse</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="spindle.0.speed-out-abs"> speed-out-abs</TD></TR>
+                        </TABLE>
+                    </TD></TR></TABLE>
+                >]
+            }      
 
-            vfd:o0 -> spindle_0:i0  [label="spindle-at-speed"  fontsize = "12" fontcolor="blue" color="blue"];
-
-            vfd:o1 -> sink0 [label="spindle-RPM"];
-            vfd:o2 -> sink1 [label="spindle-load-percent"];
-
-            {rank=source; src0}
-            {rank=sink; sink0 sink1}
-        }
+            # ============== Create edges from sig.out===================
+            "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.023.in" -> "spindle.0":"spindle.0.amp-fault-in" [label="VFD-fault"]
+            "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.031.in" -> "spindle.0":"spindle.0.at-speed" [label="spindle-at-speed"]
+            "spindle.0":"spindle.0.reverse" -> "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.000.out" [label="spindle-ccw"]
+            "spindle.0":"spindle.0.forward" -> "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.033.out" [label="spindle-cw"]
+            "spindle.0":"spindle.0.on" -> "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.029.out" [label="spindle-enable"]
+            "spindle.0":"spindle.0.on" -> "hm2_7i92.0.pwmgen.00":"hm2_7i92.0.pwmgen.00.enable" [label="spindle-enable"]
+            "spindle.0":"spindle.0.speed-out-abs" -> "hm2_7i92.0.pwmgen.00":"hm2_7i92.0.pwmgen.00.value" [label="spindle-vel-cmd-rpm"]
+            #============== Signals that don't have both source and destination pins. ===========
+        }	#footer
     \enddot
 */
-
-/*
-
-
-*/
-
