--- a/router3/graphViz/SpindleVFDWiring.dox
+++ b/router3/graphViz/SpindleVFDWiring.dox
@@ -5,7 +5,7 @@
     \brief This file illustrates the wiring for the Commander SK using the Gecko G540 and Mesa boards for my router spindle.
     
     \dot
-       digraph structs {
+    digraph structs99 {
             concentrate=true
             rankdir="LR"
             label="Router Spindle Wiring Connections."
@@ -113,13 +113,13 @@
                     cluster=false;
                     relay_out [shape="box" label=<
                         <TABLE CELLBORDER="0" BORDER="0">
-                            <TR><TD ALIGN="LEFT" port="K1sig"> K1 signal  </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K1sig"> K1 Com     </TD></TR> 
                             <TR><TD ALIGN="LEFT" port="K1no" > K1 NO      </TD></TR> 
-                            <TR><TD ALIGN="LEFT" port="K2sig"> K2 signal  </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K2sig"> K2 Com     </TD></TR> 
                             <TR><TD ALIGN="LEFT" port="K2no" > K2 NO      </TD></TR> 
-                            <TR><TD ALIGN="LEFT" port="K3sig"> K3 signal  </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K3sig"> K3 Com     </TD></TR> 
                             <TR><TD ALIGN="LEFT" port="K3no" > K3 NO      </TD></TR> 
-                            <TR><TD ALIGN="LEFT" port="K4sig"> K4 signal  </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K4sig"> K4 Com     </TD></TR> 
                             <TR><TD ALIGN="LEFT" port="K4no" > K4 NO      </TD></TR> 
                         </TABLE>
                     >]
@@ -130,39 +130,39 @@
             n02 [shape="rarrow" label="spindle-cw"];
             n03 [shape="rarrow" label="spindle-ccw"];
             
-            n04 [shape="rarrow" label="spindle-pwm
-            (pwmgen.01.out0)  "];
+            n04 [shape="rarrow" label="(pwmgen.01.out0)"];
             n05 [shape="larrow" label="spindle-at-speed"];
             n06 [shape="larrow" label="VFD-fault"];
-
+            n07 [shape="rarrow" label="gpio-gnd"];
 
             DB25:o14        -> terminals:p8;
-            terminals:p7    -> VFD_T:T1 [dir=back];
-            terminals:p8    -> VFD_T:T2 ;
-            terminals:p9    -> VFD_T:T3 [dir=back];
+            terminals:p7    -> VFD_T:T1 [label="(orange/white)" dir=back];
+            terminals:p8    -> VFD_T:T4 [label="(blue)"];
+            terminals:p9    -> VFD_T:T3 [label="(orange)" dir=back];
             
-            VFD_T:T5 ->   n06
-            VFD_T:T6:e -> VFD_T:T1:e [dir=both]
+            VFD_T:T5 ->   n06 [label="VFD-fault (green/white)" ]
+            VFD_T:T6:e -> n07 [dir=both]
             
-            VFD_B:B2            -> relay_out:K1sig;
+            VFD_B:B2            -> relay_out:K1sig [label="+24V (orange)"];
             relay_out:K1sig     -> relay_out:K2sig
             relay_out:K2sig     -> relay_out:K3sig
 
 
-            n01 -> relay_in:IN1 [label="enable"];
-            n02 -> relay_in:IN2 [label="cw"];
-            n03 -> relay_in:IN3 [label="ccw"];
+            n01:e -> relay_in:IN1 [label="enable"];
+            n02:e -> relay_in:IN2 [label="cw"];
+            n03:e -> relay_in:IN3 [label="ccw"];
             VFD_B:B3-> relay_in:IN4 [label="at-speed"]
             
-            relay_out:K1no -> VFD_B:B4 [label="enable"];
-            relay_out:K2no -> VFD_B:B5  [label="cw"];
-            relay_out:K3no -> VFD_B:B6 [label="ccw"];
+            relay_out:K1no -> VFD_B:B4 [label="enable (blue)"];
+            relay_out:K2no -> VFD_B:B5  [label="cw (blue/white)"];
+            relay_out:K3no -> VFD_B:B6  [label="ccw (green)"];
             relay_out:K4no -> n05 [label="at-speed"];
 
-            n04 -> DB25:o14 [label="spindle-pwm"];
-            
-            
-            {rank=source n01 n02 n03 n04 n05 n06};
-       }
+            n04:e -> DB25:o14 [label=""];
+                        
+            {rank=source n01 n02 n03 n04 n05 n06 n07};
+       }     
     \enddot
+*/
+/*
 */
