--- a/router3/graphViz/SpindleControl.dox
+++ b/router3/graphViz/SpindleControl.dox
@@ -4,14 +4,53 @@
     \brief This file contains the doxygen description and diagram illustrating the Spindle HAL components.
 
 
-    This diagram illustrates the .hal components I use with a VFD using wired connections.
+    This diagram illustrates the .hal components I use with a VFD using modbus connections.
     
     \dot
-        digraph hal_net_SpindleControl {
+        digraph hal_net_Spindle {
             graph [rankdir="LR"];
             label = "SpindleControl"
             node [fontsize = "8"];
 
+
+            subgraph "component_cmdrsk_vfd" {
+                label = "cmdrsk_vfd"
+                cluster = true;
+                "cmdrsk_vfd" [ shape="none" margin=0 label=<
+                    <TABLE CELLBORDER="0" BORDER="0"><TR><TD> 
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="LEFT" PORT="cmdrsk_vfd.speed-command"> speed-command</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="cmdrsk_vfd.spindle-fwd"> spindle-fwd</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="cmdrsk_vfd.spindle-on"> spindle-on</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="cmdrsk_vfd.spindle-rev"> spindle-rev</TD></TR>
+                        </TABLE>
+                        </TD><TD>
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="RIGHT" PORT="cmdrsk_vfd.at-speed"> at-speed</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="cmdrsk_vfd.current-load-percentage"> current-load-percentage</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="cmdrsk_vfd.frequency-out"> frequency-out</TD></TR>
+                        </TABLE>
+                    </TD></TR></TABLE>
+                >]
+            }      #  end sub/component_cmdrsk_vfd
+            subgraph "component_gmoccapy" {
+                label = "gmoccapy"
+                cluster = true;
+                "gmoccapy" [ shape="none" margin=0 label=<
+                    <TABLE CELLBORDER="0" BORDER="0"><TR><TD> 
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="LEFT" PORT="gmoccapy.spindle_at_speed_led"> spindle_at_speed_led</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="gmoccapy.spindle_feedback_bar"> spindle_feedback_bar</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="gmoccapy.toolchange-change"> toolchange-change</TD></TR>
+                            <TR><TD ALIGN="LEFT" PORT="gmoccapy.toolchange-number"> toolchange-number</TD></TR>
+                        </TABLE>
+                        </TD><TD>
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="RIGHT" PORT="gmoccapy.toolchange-changed"> toolchange-changed</TD></TR>
+                        </TABLE>
+                    </TD></TR></TABLE>
+                >]
+            }      #  end sub/component_gmoccapy
             subgraph "component_hm2_7i92.0" {
                 label = "hm2_7i92.0"
                 cluster = true;
@@ -21,14 +60,11 @@
                 "hm2_7i92.0.gpio" [ shape="none" margin=0 label=<
                     <TABLE CELLBORDER="0" BORDER="0"><TR><TD> 
                         <TABLE CELLBORDER="0" BORDER="1">
-                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.000.out"> 000.out</TD></TR>
                             <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.007.out"> 007.out</TD></TR>
                             <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.020.out"> 020.out</TD></TR>
                             <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.022.out"> 022.out</TD></TR>
                             <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.024.out"> 024.out</TD></TR>
                             <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.026.out"> 026.out</TD></TR>
-                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.029.out"> 029.out</TD></TR>
-                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.gpio.033.out"> 033.out</TD></TR>
                         </TABLE>
                         </TD><TD>
                         <TABLE CELLBORDER="0" BORDER="1">
@@ -41,43 +77,12 @@
                             <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.025.in"> 025.in</TD></TR>
                             <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.027.in"> 027.in</TD></TR>
                             <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.028.in"> 028.in</TD></TR>
-                            <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.031.in"> 031.in</TD></TR>
                             <TR><TD ALIGN="RIGHT" PORT="hm2_7i92.0.gpio.032.in"> 032.in</TD></TR>
                         </TABLE>
                     </TD></TR></TABLE>
                 >]
             }      #  end sub/component_hm2_7i92.0.gpio
-            subgraph "subcomponent_pwmgen" {
-                label = "pwmgen"
-                cluster = true;
-            subgraph "subcomponent_00" {
-                label = "00"
-                cluster = true;
-                "hm2_7i92.0.pwmgen.00" [ shape="none" margin=0 label=<
-                        <TABLE CELLBORDER="0" BORDER="1">
-                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.pwmgen.00.enable"> enable</TD></TR>
-                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.pwmgen.00.value"> value</TD></TR>
-                        </TABLE>
-                >]
-            }      #  end sub/component_hm2_7i92.0.pwmgen.00
-            subgraph "subcomponent_01" {
-                label = "01"
-                cluster = true;
-                "hm2_7i92.0.pwmgen.01" [ shape="none" margin=0 label=<
-                        <TABLE CELLBORDER="0" BORDER="1">
-                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.pwmgen.01.enable"> enable</TD></TR>
-                            <TR><TD ALIGN="LEFT" PORT="hm2_7i92.0.pwmgen.01.value"> value</TD></TR>
-                        </TABLE>
-                >]
-            }      #  end sub/component_hm2_7i92.0.pwmgen.01
-                "hm2_7i92.0.pwmgen" [ shape="none" margin=0 label=<
-                >]
-            }      #  end sub/component_hm2_7i92.0.pwmgen
-                "hm2_7i92.0" [ shape="none" margin=0 label=<
-                >]
             }      #  end sub/component_hm2_7i92.0
-
-
             subgraph "component_spindle.0" {
                 label = "spindle.0"
                 cluster = true;
@@ -93,20 +98,47 @@
                             <TR><TD ALIGN="RIGHT" PORT="spindle.0.on"> on</TD></TR>
                             <TR><TD ALIGN="RIGHT" PORT="spindle.0.reverse"> reverse</TD></TR>
                             <TR><TD ALIGN="RIGHT" PORT="spindle.0.speed-out-abs"> speed-out-abs</TD></TR>
+                            <TR><TD ALIGN="RIGHT" PORT="spindle.0.speed-out-rps-abs"> speed-out-rps-abs</TD></TR>
                         </TABLE>
                     </TD></TR></TABLE>
                 >]
-            }      
+            }      #  end sub/component_spindle.0
+            subgraph "component_scale_rpm" {
+                label = "scale_rpm"
+                cluster = true;
+                "scale_rpm" [ shape="none" margin=0 label=<
+                    <TABLE CELLBORDER="0" BORDER="0"><TR><TD> 
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="LEFT" PORT="scale_rpm.in"> in</TD></TR>
+                        </TABLE>
+                        </TD><TD>
+                        <TABLE CELLBORDER="0" BORDER="1">
+                            <TR><TD ALIGN="RIGHT" PORT="scale_rpm.out"> out</TD></TR>
+                        </TABLE>
+                    </TD></TR></TABLE>
+                >]
+            }      #  end sub/component_scale_rpm
 
             # ============== Create edges from sig.out===================
             "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.023.in" -> "spindle.0":"spindle.0.amp-fault-in" [label="VFD-fault"]
-            "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.031.in" -> "spindle.0":"spindle.0.at-speed" [label="spindle-at-speed"]
-            "spindle.0":"spindle.0.reverse" -> "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.000.out" [label="spindle-ccw"]
-            "spindle.0":"spindle.0.forward" -> "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.033.out" [label="spindle-cw"]
-            "spindle.0":"spindle.0.on" -> "hm2_7i92.0.gpio":"hm2_7i92.0.gpio.029.out" [label="spindle-enable"]
-            "spindle.0":"spindle.0.on" -> "hm2_7i92.0.pwmgen.00":"hm2_7i92.0.pwmgen.00.enable" [label="spindle-enable"]
-            "spindle.0":"spindle.0.speed-out-abs" -> "hm2_7i92.0.pwmgen.00":"hm2_7i92.0.pwmgen.00.value" [label="spindle-vel-cmd-rpm"]
+            "cmdrsk_vfd":"cmdrsk_vfd.at-speed" -> "gmoccapy":"gmoccapy.spindle_at_speed_led" [label="spindle-at-speed"]
+            "cmdrsk_vfd":"cmdrsk_vfd.at-speed" -> "spindle.0":"spindle.0.at-speed" [label="spindle-at-speed"]
+            "spindle.0":"spindle.0.reverse" -> "cmdrsk_vfd":"cmdrsk_vfd.spindle-rev" [label="spindle-ccw"]
+            "spindle.0":"spindle.0.forward" -> "cmdrsk_vfd":"cmdrsk_vfd.spindle-fwd" [label="spindle-cw"]
+            "spindle.0":"spindle.0.on" -> "cmdrsk_vfd":"cmdrsk_vfd.spindle-on" [label="spindle-enable"]
+            "spindle.0":"spindle.0.speed-out-rps-abs" -> "cmdrsk_vfd":"cmdrsk_vfd.speed-command" [label="spindle-frequency-cmd-abs"]
+            "cmdrsk_vfd":"cmdrsk_vfd.frequency-out" -> "scale_rpm":"scale_rpm.in" [label="spindle-frequency-out"]
+            "cmdrsk_vfd":"cmdrsk_vfd.current-load-percentage" -> "spindle-load-percent":w [label="spindle-load-percent"]
+            "scale_rpm":"scale_rpm.out" -> "gmoccapy":"gmoccapy.spindle_feedback_bar" [label="spindle-rpm"]
             #============== Signals that don't have both source and destination pins. ===========
+
+            subgraph sub_sink {
+                "spindle-load-percent"	 [shape=rarrow]
+            
+            }
+            {rank=sink  "spindle-load-percent" }
+
+
         }	#footer
-    \enddot
+  \enddot
 */
